# sol-airdrop

./: Anchor.toml  README.md  package.json
migrations/: deploy.ts
programs/airdrop/: Cargo.toml
programs/airdrop/src/: lib.rs
tests/: airdrop.ts
